fix(api/todo): update by id
